# ECE-AGENT

./: .env.agent  .env.example  .eslintrc.json  .gitignore  .vercelignore  .windsurfrules.md  AGENT-LLM-SETUP.md  AGENT-LLM-SUPERIORITY-REPORT.md  AGENT_SETUP_COMPLETE.md  CHANGELOG.md  CLEANUP_COMPLETION_REPORT.md  CLEANUP_STATUS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  Dockerfile.dev  END_GOAL.md  LIVE_TESTING_REPORT.md  Makefile  PROJECT_STRUCTURE_UPDATED.md  README.md  SETUP_SUMMARY.md  STARTUP_GUIDE.md  VERCEL_DEPLOYMENT.md  agent-optimization-results.json  arbitrage_server.py  benchmark-agent-llm.js  benchmark-superiority-results.json  benchmark-superiority-test.js  cleanup_standardize.sh  complete_migrations.sql  demo_patch6.py  enhanced_server.py  final_status_check.py  fix-policies.sql  jest.config.js  jest.config.ts  jest.polyfills.ts  jest.setup.ts  knowledge_server.py  (+34 more)
.jest-cache/: haste-map-a02dcf8913de56229a82a084f044bc0a-fb271719c169f5d880c6364547a04a49-a589f87274bd7a1bcadf60159aa2b6d1  haste-map-a3f9559e2d61a7f7eac81dfc5f858617-64480743b2d2a00b217b52082b947fe3-e3432774b23ad6f4f8b90a00cd882843  perf-cache-a02dcf8913de56229a82a084f044bc0a-da39a3ee5e6b4b0d3255bfef95601890  perf-cache-a3f9559e2d61a7f7eac81dfc5f858617-da39a3ee5e6b4b0d3255bfef95601890
.venv-2/: pyvenv.cfg
__mocks__/: credits-popover.tsx  react-markdown.tsx  react-syntax-highlighter.tsx  rhs-styles-prism.ts
agent/: __init__.py  arbitrage_strategies.py  auth.py  base_classes.py  chat_rooms.py  container_orchestrator.py  core.py  enhanced_agent.py  enhanced_trading.py  knowledge_base.py  knowledge_base_v2.py  legal_fiscal_optimizer.py  model_manager.py  multi_model_router.py  performance_monitor.py  room_websocket.py  rust_integration.py  security_tools.py  spline_training_interface.py  trainer.py  vector_memory_system.py  video_api.py  web_scraper.py
api/: index.js  index.py  mcp_endpoints.py  spline_training_api.py  test.py
app/: globals.css  layout.tsx  page.tsx  providers.tsx
benchmarking/: AGENT-Benchmark-Analysis.md  AGENT-Benchmark-Execution-Report.md  AGENT-Benchmark-Framework.py  AGENT-Comprehensive-Analysis-Report.md  AGENT-Comprehensive-Testing-Framework.py  AGENT-Improvement-Timeline-Analysis.md  benchmark_execution_results.json
components/: ErrorBoundary.tsx  LoadingStates.tsx  agent-branding.tsx  google-auth-hint.tsx  login-form.tsx  logout-button.tsx  profile-signin-popup.tsx  solana-login-button.tsx  solana-wallet-provider.tsx  theme-toggle.tsx
config/: agent_config.json  auth_config.json  clickup_config.json  health_config.json  mcp_config.json
contexts/: density-context.tsx  sidebar-context.tsx  user-context.tsx
coverage/: clover.xml  coverage-final.json  lcov.info
demos/: README.md
deployment/: README.md
docs/: AGENT-Supremacy-Vision.md  AGENT-White-Paper.md  AGENT-Workplace-Transformation-Plan.md  CREDITS.md  END_GOAL.md  END_GOAL_VERIFICATION.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READINESS.md  PROJECT_STRUCTURE.md  README.md  SITEMAP.md  TESTING_GUIDE.md  agent-model-comprehensive.md  github-release-template.md  guidelines.md  plan.md  pricing-model-checklist.md  pricing-model-updated.md  pricing-model.md  (+1 more)
rust/: Cargo.toml
rust/agent-container-orchestrator/: Cargo.toml
rust/agent-container-orchestrator/src/: lib.rs
rust/agent-core-utils/: Cargo.toml
rust/agent-core-utils/src/: lib.rs
rust/agent-performance-monitor/: Cargo.toml
rust/agent-performance-monitor/src/: lib.rs
rust/agent-security-tools/: Cargo.toml
rust/agent-security-tools/src/: lib.rs
(+1333 files in other folders)
