[package]
name = "agent-container-orchestrator"
version = "0.1.0"
edition = "2021"

[lib]
name = "agent_container_orchestrator"
crate-type = ["cdylib"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
pyo3 = { workspace = true }

# Container orchestration dependencies
bollard = "0.15"
futures-util = "0.3"
tar = "0.4"
flate2 = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
pyo3-build-config = "0.20"
