[package]
name = "agent-core-utils"
version = "0.1.0"
edition = "2021"

[lib]
name = "agent_core_utils"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true } 
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
futures = "0.3"
rayon = "1.7"
dashmap = "5.4"
parking_lot = "0.12"
lru = "0.10"
blake3 = "1.4"
base64 = "0.21"
regex = "1.8"
psutil = "3.2"
