[package]
name = "agent-performance-monitor"
version = "0.1.0"
edition = "2021"

[lib]
name = "agent_performance_monitor"
crate-type = ["cdylib"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
pyo3 = { workspace = true }

# Performance monitoring dependencies
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-std = "1.12"
crossbeam = "0.8"
rayon = "1.8"
histogram = "0.6"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

[build-dependencies]
pyo3-build-config = "0.20"
