[package]
name = "agent-security-tools"
version = "0.1.0"
edition = "2021"

[lib]
name = "agent_security_tools"
crate-type = ["cdylib"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
pyo3 = { workspace = true }

# Security-specific dependencies  
trust-dns-resolver = "0.23"
socket2 = "0.5"
sysinfo = "0.30"
futures = "0.3"
async-std = "1.12"
crossbeam = "0.8"
rayon = "1.8"
tokio-util = "0.7"
chrono = { version = "0.4", features = ["serde"] }

# Network scanning
pnet = "0.34"

[build-dependencies]
pyo3-build-config = "0.20"
